zip/step18b2_retry_v2_2026-02-11_000154.log
== git state (before) ==
## feat/step18b2-backend-start-role-v1
?? foodproc_step15_applyanswers.sh
?? fpc_step_14_patch_bundle.zip
?? scripts/step18b2_patch_backend_start_role.py
?? scripts/step_14_apply_patch_bundle_v1.sh
?? scripts/step_14_pack_current_sources_v1.sh
?? scripts/step_14_pack_for_patch_v1.sh
?? scripts/step_14_retry_apply_patch_bundle_v2.sh
?? workspace/_bak_step14_2026-02-10_104335/
?? zip/
2026-02-10 23:31:50 +0300 e340b45  (HEAD -> feat/step18b2-backend-start-role-v1, tag: cp/foodproc_step18b2_backend_start_role_before_2026-02-10_234604, tag: cp/foodproc_step18b1_fix_js_parse_after_2026-02-10_233150, fix/step18b1-js-parse-v1) fix(step18b1): repair JS parse error in mermaid placeholder
models.py: inserted start_role after roles
mermaid.py: added start_role to render_mermaid signature
mermaid.py: appended _render_empty_pool_lanes helper
mermaid.py: injected empty-nodes block
main.py: added CreateSessionIn.start_role
main.py: stored start_role in Session() on create

== sanity ==
  File "backend/app/exporters/mermaid.py", line 179
    if mode == \"lanes\" and roles:
                ^
SyntaxError: unexpected character after line continuation character
 backend/app/exporters/mermaid.py | 24 +++++++++++++++++++++++-
 backend/app/main.py              |  8 +++++---
 backend/app/models.py            |  1 +
 3 files changed, 29 insertions(+), 4 deletions(-)
== changed files zip ==
-rw-r--r--  1 mac  staff    11K 11 фев 00:01 zip/foodproc_step18b2_retry_v2_changed_files_2026-02-11_000154.zip
[feat/step18b2-backend-start-role-v2 8b6efbd] feat(step18b2): persist start_role + mermaid empty pool/lanes
 4 files changed, 198 insertions(+), 4 deletions(-)
 create mode 100644 scripts/step18b2_patch_backend_v2.py

== docker compose up ==
#1 [internal] load local bake definitions
#1 reading from stdin 577B done
#1 DONE 0.0s

#2 [internal] load build definition from Dockerfile
#2 transferring dockerfile: 412B 0.0s done
#2 DONE 0.0s

#3 [internal] load metadata for docker.io/library/python:3.11-slim
#3 ...

#4 [auth] library/python:pull token for registry-1.docker.io
#4 DONE 0.0s

#3 [internal] load metadata for docker.io/library/python:3.11-slim
#3 DONE 1.6s

#5 [internal] load .dockerignore
#5 transferring context: 2B done
#5 DONE 0.0s

#6 [1/6] FROM docker.io/library/python:3.11-slim@sha256:0b23cfb7425d065008b778022a17b1551c82f8b4866ee5a7a200084b7e2eafbf
#6 resolve docker.io/library/python:3.11-slim@sha256:0b23cfb7425d065008b778022a17b1551c82f8b4866ee5a7a200084b7e2eafbf 0.0s done
#6 DONE 0.0s

#7 [internal] load build context
#7 transferring context: 77.43kB 0.0s done
#7 DONE 0.0s

#8 [2/6] WORKDIR /app
#8 CACHED

#9 [3/6] COPY backend/requirements.txt /app/backend/requirements.txt
#9 CACHED

#10 [4/6] RUN pip install --no-cache-dir -r /app/backend/requirements.txt
#10 CACHED

#11 [5/6] COPY backend /app/backend
#11 DONE 0.0s

#12 [6/6] RUN mkdir -p /app/workspace/processes /app/workspace/.session_store
#12 DONE 0.2s

#13 exporting to image
#13 exporting layers 0.1s done
#13 exporting manifest sha256:6f0264a6f0660cdd3f0565e5cf563bba0997a607534dd216f2b80398f30bebd6 done
#13 exporting config sha256:cb37e6051c0a325fba6e6c5e7a847a97f41356810af96d8f19e7da16ec0db48e done
#13 exporting attestation manifest sha256:25c6d7c69b5f8d3aa762b1974699b856524fe33e20905319d9b4029a147f34ef 0.0s done
#13 exporting manifest list sha256:936905a2355493eb46287c4f4fe42e8eaf105540df68c34ced6336de7c996f2c
#13 exporting manifest list sha256:936905a2355493eb46287c4f4fe42e8eaf105540df68c34ced6336de7c996f2c done
#13 naming to docker.io/library/foodproc_process_copilot-app:latest done
#13 unpacking to docker.io/library/foodproc_process_copilot-app:latest 0.0s done
#13 DONE 0.2s

#14 resolving provenance for metadata file
#14 DONE 0.0s
 foodproc_process_copilot-app  Built
 Container foodproc_process_copilot-app-1  Recreate
 Container foodproc_process_copilot-app-1  Recreated
 Container foodproc_process_copilot-app-1  Starting
 Container foodproc_process_copilot-app-1  Started

== probe ==
000

== done ==
## feat/step18b2-backend-start-role-v2
?? foodproc_step15_applyanswers.sh
?? fpc_step_14_patch_bundle.zip
?? scripts/step18b2_patch_backend_start_role.py
?? scripts/step_14_apply_patch_bundle_v1.sh
?? scripts/step_14_pack_current_sources_v1.sh
?? scripts/step_14_pack_for_patch_v1.sh
?? scripts/step_14_retry_apply_patch_bundle_v2.sh
?? workspace/_bak_step14_2026-02-10_104335/
?? zip/
2026-02-11 00:01:54 +0300 8b6efbd  (HEAD -> feat/step18b2-backend-start-role-v2, tag: cp/foodproc_step18b2_retry_v2_after_2026-02-11_000154) feat(step18b2): persist start_role + mermaid empty pool/lanes

log: zip/step18b2_retry_v2_2026-02-11_000154.log
changed-files zip: zip/foodproc_step18b2_retry_v2_changed_files_2026-02-11_000154.zip
hard refresh: Cmd+Shift+R
